FIx contrast error

--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ form {
 
 .form-btn {
   padding: 1em;
-  color: #6070ff;
+  color: #030405;
   border-radius: 8px;
   font-weight: 600;
   width: 140px;
